--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.4.1
 async-generator==1.10
+atomicwrites==1.4.1
 attrs==21.2.0
 autopep8==1.6.0
 certifi==2021.10.8
@@ -51,6 +52,7 @@ toml==0.10.2
 trio==0.19.0
 trio-websocket==0.9.2
 typing_extensions==4.0.1
+tzdata==2023.3
 urllib3==1.26.7
 watchdog==2.1.6
 whitenoise==5.3.0
